added some pages fr this time

--- a/about.html
+++ b/about.html
@@ -11,7 +11,6 @@
             max-width: 670px;
             margin: 0 auto;
             padding: 0 15px;
-            text-align: center;
         }
 
         article {
@@ -28,6 +27,13 @@
             padding: 55px;
         }
 
+        article {
+            text-align: center;
+        }
+
+        article p{
+            text-align: left;
+        }
     </style>
 </head>
 
@@ -46,7 +52,10 @@
         </div>
     </header>
     <div class="center">
-        In progress :)
+        <article class="page">
+            <img style="margin: 30px; width: 300px;" src="/profile.jpg" alt="image of author">
+            <p>Hi! I'm Michael (or Mike, if you're a Mike person). I was born in St. Louis, MO, but I currently live in New Haven, CT where I'm a junior at Yale University. Some things I enjoy are playing water polo, learning about computers, and experimenting with fermented foods. I hope you stick around!</p>
+        </article>
     </div>
 </body>
 
