--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,6 @@
             max-width: 670px;
             margin: 0 auto;
             padding: 0 15px;
-            text-align: center;
         }
 
         article {
@@ -28,6 +27,13 @@
             padding: 55px;
         }
 
+        article {
+            text-align: center;
+        }
+
+        article p{
+            text-align: left;
+        }
     </style>
 </head>
 
@@ -39,14 +45,16 @@
                 &#x273B;
                 <a href="/about.html">About</a>
                 &#x273B;
-                <a href="/contact.html">Contact</a>
+                <a href="/about.html">Contact</a>
                 &#x273B;
                 <a href="/lists.html">Lists</a>
             </nav>
         </div>
     </header>
     <div class="center">
-        In progress :)
+        <article>
+            <p>The absolute best way to contact me is by phone call -- I'll usually respond within an hour. If you don't have my number, send me an email at <a href="mailto:michael.tu@yale.edu">michael.tu@yale.edu</a>. I try to respond within two days, but if you don't hear from me by then, feel free to send a follow up!</p>
+        </article>
     </div>
 </body>
 
