--- a/lists.html
+++ b/lists.html
@@ -11,7 +11,6 @@
             max-width: 670px;
             margin: 0 auto;
             padding: 0 15px;
-            text-align: center;
         }
 
         article {
@@ -28,6 +27,13 @@
             padding: 55px;
         }
 
+        article {
+            text-align: center;
+        }
+
+        article p{
+            text-align: left;
+        }
     </style>
 </head>
 
@@ -39,15 +45,13 @@
                 &#x273B;
                 <a href="/about.html">About</a>
                 &#x273B;
-                <a href="/contact.html">Contact</a>
+                <a href="/about.html">Contact</a>
                 &#x273B;
                 <a href="/lists.html">Lists</a>
             </nav>
         </div>
     </header>
-    <div class="center">
-        In progress :)
-    </div>
+    
 </body>
 
 </html>
