--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         }
 
         nav {
-            background-color: lightblue;
+            /* background-color: lightblue; */
             display: block;
             text-align: center;
         }
