remade with jekyll in mind

--- a/about.html
+++ b/about.html
@@ -1,62 +1,10 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <style>
-        .center {
-            max-width: 670px;
-            margin: 0 auto;
-            padding: 0 15px;
-        }
-
-        article {
-            display: block;
-        }
-
-        nav {
-            /* background-color: lightblue; */
-            display: block;
-            text-align: center;
-        }
-
-        nav a {
-            padding: 55px;
-        }
-
-        article {
-            text-align: center;
-        }
-
-        article p{
-            text-align: left;
-        }
-    </style>
-</head>
-
-<body>
-    <header>
-        <div class="center">
-            <nav>
-                <a href="/index.html">Home</a>
-                &#x273B;
-                <a href="/about.html">About</a>
-                &#x273B;
-                <a href="/contact.html">Contact</a>
-                &#x273B;
-                <a href="/lists.html">Lists</a>
-            </nav>
-        </div>
-    </header>
-    <div class="center">
-        <article class="page">
-            <img style="margin: 30px; width: 300px;" src="/profile.jpg" alt="image of author">
-            <p style="margin: 0;">Hi! I'm Michael (or Mike, if you're a Mike person). I was born in St. Louis, MO, but I currently live in New Haven, CT where I'm a junior at Yale University. Some things I enjoy are playing water polo, learning about computers, and experimenting with fermented foods. I hope you stick around!</p>
-        </article>
-    </div>
-</body>
-
-</html>
+---
+layout: default
+title: About
+---
+<article>
+    <div style="text-align: center;margin-bottom:15px;"><img style="width: 300px;" src="/assets/images/profile.jpg" alt="image of author"></div>
+    <p>Hi! I'm Michael (or Mike, if you're a Mike person). I was born in St. Louis, MO, but I currently live in New Haven,
+    CT where I'm a junior at Yale University. Some things I enjoy are playing water polo, learning about computers, and
+    experimenting with fermented foods. I hope you stick around!</p>
+</article>
