--- a/lists.html
+++ b/lists.html
@@ -1,57 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <style>
-        .center {
-            max-width: 670px;
-            margin: 0 auto;
-            padding: 0 15px;
-        }
-
-        article {
-            display: block;
-        }
-
-        nav {
-            /* background-color: lightblue; */
-            display: block;
-            text-align: center;
-        }
-
-        nav a {
-            padding: 55px;
-        }
-
-        article {
-            text-align: center;
-        }
-
-        article p{
-            text-align: left;
-        }
-    </style>
-</head>
-
-<body>
-    <header>
-        <div class="center">
-            <nav>
-                <a href="/index.html">Home</a>
-                &#x273B;
-                <a href="/about.html">About</a>
-                &#x273B;
-                <a href="/about.html">Contact</a>
-                &#x273B;
-                <a href="/lists.html">Lists</a>
-            </nav>
-        </div>
-    </header>
-    
-</body>
-
-</html>
+---
+layout: default
+title: Lists
+---
