--- a/contact.html
+++ b/contact.html
@@ -1,61 +1,9 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/favicon/site.webmanifest">
-    <style>
-        .center {
-            max-width: 670px;
-            margin: 0 auto;
-            padding: 0 15px;
-        }
-
-        article {
-            display: block;
-        }
-
-        nav {
-            /* background-color: lightblue; */
-            display: block;
-            text-align: center;
-        }
-
-        nav a {
-            padding: 55px;
-        }
-
-        article {
-            text-align: center;
-        }
-
-        article p{
-            text-align: left;
-        }
-    </style>
-</head>
-
-<body>
-    <header>
-        <div class="center">
-            <nav>
-                <a href="/index.html">Home</a>
-                &#x273B;
-                <a href="/about.html">About</a>
-                &#x273B;
-                <a href="/about.html">Contact</a>
-                &#x273B;
-                <a href="/lists.html">Lists</a>
-            </nav>
-        </div>
-    </header>
-    <div class="center">
-        <article>
-            <p>The absolute best way to contact me is by phone call -- I'll usually respond within an hour. If you don't have my number, send me an email at <a href="mailto:michael.tu@yale.edu">michael.tu@yale.edu</a>. I try to respond within two days, but if you don't hear from me by then, feel free to send a follow up!</p>
-        </article>
-    </div>
-</body>
-
-</html>
+---
+layout: default
+title: Contact
+---
+<article>
+    The absolute best way to contact me is by phone call -- I'll usually respond within an hour. If you don't have my
+    number, send me an email at <a href='mailto: michael.tu@yale.edu;'>michael.tu@yale.edu</a>. I try to respond within
+    two days, but if you don't hear from me by then, feel free to send a follow up!
+</article>
